package org.ungs.core;

public enum TopologyType {
  GRID_6X6
}
