package org.ungs.metrics;

public enum MetricType {
  AVG_DELIVERY_TIME
}
