package org.ungs.routing;

public enum AlgorithmType {
  Q_ROUTING
}
